<resources>
    <string name="app_name">Infake</string>
    <string name="contact_number">Contact Number</string>
    <string name="contact_name">Contact Name</string>
    <string name="schedule_call">Schedule Call</string>
    <string name="ringtone">Ringtone</string>
    <string name="call_screen">Call Screen</string>
    <string name="create_profile">Create Profile</string>
    <string name="use_existing_contact">Use existing contact</string>
    <string name="add_profile_desc">Add profile header</string>
    <string name="schedule_text">Schedule Call</string>
    <string name="now">Now</string>
    <string name="_2_minutes">2 minutes</string>
    <string name="_5_minutes">5 minutes</string>
    <string name="_10_minutes">10 minutes</string>
    <string name="custom_time">Custom time</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="contact_picture">Contact Picture</string>
    <string name="cancel_image_desc">Cancel profile picture</string>
    <string name="answer">Answer</string>
    <string name="decline">Decline</string>
    <string name="incoming_voice_call">Incoming voice call</string>
    <string name="name">Name</string>
</resources>