<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="265dp"
        android:layout_height="325dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button1"
            style="@style/ContactButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/now"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button2"/>
<!--            app:layout_constraintTop_toBottomOf="@+id/textView"-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            style="@style/ContactButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2_minutes"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintTop_toBottomOf="@+id/button1"
            app:layout_constraintBottom_toTopOf="@+id/button3"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button3"
            style="@style/ContactButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_5_minutes"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:layout_constraintBottom_toTopOf="@+id/button4"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button4"
            style="@style/ContactButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_10_minutes"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="@id/customTime"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/customTime"
            style="@style/ContactButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_time"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />


    </LinearLayout>
</layout>