<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.CreateFragment">

    <data>
        <variable
            name="viewModel"
            type="com.sawelo.infake.CreateViewModel" />
        <variable
            name="createFragment"
            type="com.sawelo.infake.fragment.CreateFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/contact_picture"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:src="@drawable/ic_baseline_person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contact_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/contact_name"
            app:layout_constraintBottom_toTopOf="@id/contact_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/contact_picture"
            app:layout_constraintTop_toTopOf="@+id/contact_picture"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contact_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contact_number"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/contact_number"
            app:layout_constraintBottom_toBottomOf="@+id/contact_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/contact_picture"
            app:layout_constraintTop_toBottomOf="@+id/contact_name"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contact_number_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/schedule_call_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toTopOf="@id/ringtone_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contact_picture"
            android:text="@{viewModel.scheduleText}"
            android:onClick="@{() -> createFragment.scheduleCall()}"/>

        <Button
            android:id="@+id/ringtone_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/ringtone"
            app:layout_constraintBottom_toTopOf="@id/call_screen_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/schedule_call_button" />

        <Button
            android:id="@+id/call_screen_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/call_screen"
            app:layout_constraintBottom_toTopOf="@+id/create_profile_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ringtone_button" />

        <Button
            android:id="@+id/create_profile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/create_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/call_screen_button"
            android:onClick="@{() -> createFragment.createProfile()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>